# grav_sim

./: .gitignore  README.md  pyproject.toml
assets/: eatonhand_rom.csv
assets/hand_segments/: finger_0_faces.npy  finger_0_remaining_faces.npy  finger_0_vertices.npy  finger_1_faces.npy  finger_1_remaining_faces.npy  finger_1_vertices.npy  finger_2_faces.npy  finger_2_remaining_faces.npy  finger_2_vertices.npy  finger_3_faces.npy  finger_3_remaining_faces.npy  finger_3_vertices.npy  finger_4_faces.npy  finger_4_remaining_faces.npy  finger_4_vertices.npy  palm_faces.npy  palm_vertices.npy
src/grav_sim/: __init__.py  __main__.py  costs.py  default.env  features.py  features_2.py  geom.py  hands.py  sim.py  viz.py  ycb_aff.py
src/grav_sim/app/: compose.py  edit.py  fig_strata.py  fig_unseen.py  simulate.py  verify.py
src/grav_sim/ui/: app.py  axis_layer_fk_compose.py  verify_assets.py
